--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.7'
+    id 'org.springframework.boot' version '2.5.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'idea'
+    id "com.gorylenko.gradle-git-properties" version "2.4.0"
 }
 
 idea {
@@ -13,6 +14,10 @@ idea {
         downloadJavadoc = true
         downloadSources = true
     }
+}
+
+springBoot {
+    buildInfo()
 }
 
 group = 'com.arcanrun'
@@ -33,6 +38,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
